--- a/daily-notes/2018-09-18.md
+++ b/daily-notes/2018-09-18.md
@@ -72,3 +72,9 @@ More possibilities:
 ### Resources you can use to study HTML and CSS
 - [Mozilla Developer Network](https://developer.mozilla.org/en-US/docs/Web)
 - [w3schools](https://www.w3schools.com/)
+
+### Practice independence!
+If you have a question you can't figure out...
+- First try googling it
+- Then try asking your table
+- Only then ask Nabil
