add day 2 notes; minor updates for day 1

--- a/daily-notes/2018-09-18.md
+++ b/daily-notes/2018-09-18.md
@@ -29,23 +29,23 @@ Thanks for letting us get to know you better, and helping us help you!
 Please fill out [this form](https://docs.google.com/forms/d/e/1FAIpQLSde01dLh0cFII7EFCU_cAjMxHzFKJHuIJn5NAFb5-ej4lE8qw/viewform) for Nabil to help with lesson planning.
 
 ## A few of Nabil's projects
-- [https://nabilhassein.github.io/nyc-summons-precinct-visualization/]()
-- [https://nabilhassein.github.io/generative-DOOM/]()
-- [http://freethemny.com/]()
-- [http://bangbangcon.com/]()
+- [Visualizing NYC criminal court summonses](https://nabilhassein.github.io/nyc-summons-precinct-visualization/)
+- [generative-DOOM](https://nabilhassein.github.io/generative-DOOM/)
+- [#FreeThemNY](http://freethemny.com/)
+- [!!con](http://bangbangcon.com/)
 
 ## A few past Gakko Code Forward projects
-- [https://musicmeet.meteorapp.com/]()
-- [https://satin-pocket.glitch.me/]()
-- [https://bacon.glitch.me/]()
-- [https://oceanic-baker.glitch.me/]()
+- [Music Meet](https://musicmeet.meteorapp.com/)
+- [Satin Pocket](https://satin-pocket.glitch.me/)
+- [Bacon](https://bacon.glitch.me/)
+- [Oceanic Baker](https://oceanic-baker.glitch.me/)
 
 ## Introduction to HTML and CSS
 Our goal for today is to get our first informational website online using a hosted platform called Glitch. We'll need to sign up for a couple of accounts, create a new project based on the "hello-webpage" starter, and then write some HTML and CSS to make it our own!
 
 ### Account signups
-- [github.com]()
-- [glitch.com]()
+- [github.com](https://github.com)
+- [glitch.com](https://glitch.com)
 
 ### Modeling our page on existing pages
 Let's "view source" on freethemny.com and what we notice!
