add classwork submission form

--- a/daily-notes/2018-09-20.md
+++ b/daily-notes/2018-09-20.md
@@ -114,5 +114,7 @@ Minimum CSS to include:
 - a selector on a class you defined
 - a selector on an id you defined
 
+### Submit your work!
+Use [this form](https://docs.google.com/forms/d/18BYCVEDroWoFx2VbCBYJb7Db-Gf0h0QoUDACoUD2fWc/viewform) so Nabil can check out your site and your code!
 ### Additional resources
 [CSS Grid Garden](http://cssgridgarden.com/)
