add a crucial tool

--- a/daily-notes/2018-09-20.md
+++ b/daily-notes/2018-09-20.md
@@ -97,6 +97,8 @@ h1 {
 - **Margin** —  Clears an area outside the border. The margin is transparent.
 
 
+### Another web developer tool
+Try right clicking something on a page and choosing "inspect element"!
 ### Exercise: expand your page from Tuesday
 Keep working on your blog/portfolio/informational site!
 
