add a few notes to remember; fix typos

--- a/daily-notes/2018-09-20.md
+++ b/daily-notes/2018-09-20.md
@@ -36,9 +36,9 @@ Abstract representation -- `<tag>` is not a real HTML tag!
     <self-closing-tag>
   </head>
   <body>
-    <tag attr1="value1" attr2="value2>content </tag>
-    <self-closing-tag attr="value1">
-    <tag>
+    <tag attr1="value1" attr2="value2"> content </tag>
+    <self-closing-tag id="myId" attr="value">
+    <tag class="myClass">
       <nested-tag> content </nested-tag>
     </tag>
   </body>
@@ -80,6 +80,7 @@ h1 {
 }
 
 .myClassName {
+  background-color: black;
   color: red;
 }
 
@@ -99,6 +100,11 @@ h1 {
 
 ### Another web developer tool
 Try right clicking something on a page and choosing "inspect element"!
+### Things to remember
+- One CSS stylesheet can control the appearance of many HTML pages.
+- When many CSS rules apply to a single HTML element, *the most specific rule always wins*.
+- There's always more to learn!
+
 ### Exercise: expand your page from Tuesday
 Keep working on your blog/portfolio/informational site!
 
