complete discussion questions

--- a/daily-notes/2018-09-27.md
+++ b/daily-notes/2018-09-27.md
@@ -137,7 +137,8 @@ Let's check out this [Arabic Programming language!](http://nas.sr/%D9%82%D9%84%D
 
 Questions for us to think about as a group:
 - Have you ever seen a non-English programming language before?
-- What do you think
+- Why do you think so many programming languages, even ones from Brazil and Japan, are in English?
+- Can you think of any other biases that are expressed through technology?
 
 Questions I'd like you all to answer on paper:
 - Do you think it's important for coding to be expressed in different human languages? Why or why not?
