add link to night mode example

--- a/daily-notes/2018-10-02.md
+++ b/daily-notes/2018-10-02.md
@@ -75,7 +75,7 @@ JavaScript supports the math operators you're probably used to -- they just look
 
 The difference between `==` and `===`, and between `!=` and `!==`, has to do with checking for types.
 
-I recommend using `===` and `!==` every time, and never using `==` or `!
+I recommend using `===` and `!==` every time, and never using `==` or `!=`
 
 Check out [this reference](https://www.w3schools.com/js/js_comparisons.asp) if you ever need a reminder.
 
@@ -85,7 +85,7 @@ Exercise: write code to prompt the user for input and alert that the number is "
 ```
 
 ### putting it all together
-Code-along: let's add a "night mode" to a webpage!
+Code-along: let's add a "night mode" to a webpage! [Here's the example from class](https://glitch.com/edit/#!/powerful-water?path=script.js:13:0)
 
 Then, take a little time to make some more changes from your imagination and be sure you're comfortable.
 
