--- a/daily-notes/2018-10-04.md
+++ b/daily-notes/2018-10-04.md
@@ -1,4 +1,4 @@
-# Loops and comppound data types
+# Loops and compound data types
 In a few short weeks, we've already seen quite a few ways to make our JavaScript programs carry out actions and react to the user:
 - functions
 - conditionals
